--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
-    "react-image-crop": "^11.0.7",
     "sharp": "^0.33.5",
     "xlsx": "^0.18.5"
   },
