--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,5 @@
-# Dependencies
-/node_modules
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Environment
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# OS
 .DS_Store
-Thumbs.db
-
-# IDE
-.idea/
-.vscode/
-
-# Uploads
-/public/uploads/*
-!/public/uploads/.gitkeep
-
-# Build
-/public/css/output.css 
+**/.DS_Store
+*.bak
+*.bak[0-9]*
+node_modules/.package-lock.json
