--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build:css": "tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch"
+    "build:css": "tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
+    "build:css:prod": "tailwindcss -i ./public/css/input.css -o ./public/css/output.css --minify",
+    "build": "npm run build:css:prod",
+    "postinstall": "npm run build:css:prod"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
