--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "ejs": "^3.1.9",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.12.0",
     "sharp": "^0.33.5",
     "xlsx": "^0.18.5"
   },
