--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^7.0.10",
     "sharp": "^0.33.5",
     "xlsx": "^0.18.5"
   },
