--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
     "nodemon": "^3.0.2",
     "tailwindcss": "^3.4.1"
   }
